--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
 
     <body>
-
+        <div class="sketchpad">
+            
+        </div>
 
         <script src="script.js"></script>
     </body>
