Add documenting comments

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
 
     <body>
-        <div class="sketchpad">
-            
-        </div>
+        <div class="sketchpad"></div>
 
         <script src="script.js"></script>
     </body>
