Add lower frame HTML

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     </head>
 
     <body>
-        <div class="sketchpad"></div>
-
+        <main class="sketchpad"></main>
+        <div class="bottom">
+            <div class="knob"></div>
+            <div class="buttons">
+                <button>Change Grid Size</button>
+                <button>Change Color</button>
+            </div>
+            <div class="knob"></div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
