Refactor main layout from CSS Flexbox to CSS Grid

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     </head>
 
     <body>
+        <div class="top"></div>
         <main class="sketchpad"></main>
         <div class="bottom">
             <div class="knob"></div>
             <div class="buttons">
                 <button>Change Grid Size</button>
                 <button>Change Color</button>
+                <button>Reset Sketch</button>
             </div>
             <div class="knob"></div>
         </div>
