--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="buttons">
                 <button id="change-grid">Change Grid Size</button>
                 <button id="reset">Reset Sketch</button>
+                <button id="set-colors">Rainbow Colors</button>
             </div>
             <div class="knob"></div>
         </div>
