Add sketch reset when toggling color mode

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="buttons">
                 <button id="change-grid">Change Grid Size</button>
                 <button id="reset">Reset Sketch</button>
-                <button id="set-colors">Rainbow Colors</button>
+                <button id="set-colors">Rainbow Off</button>
             </div>
             <div class="knob"></div>
         </div>
