Add color picker html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         <main class="sketchpad"></main>
         <div class="bottom">
             <div class="knob"></div>
-            <div class="buttons">
-                <button id="change-grid">Change Grid Size</button>
-                <button id="reset">Reset Sketch</button>
-                <button id="set-colors">Rainbow Off</button>
+            <div class="bottom-center">
+                <div class="buttons">
+                    <button id="change-grid">Change Grid Size</button>
+                    <button id="reset">Reset Sketch</button>
+                    <button id="set-colors">Rainbow Off</button>
+                </div>
+                <label for="color-picker">Pick your color
+                    <input id="color-picker" type="color">
+                </label>
             </div>
             <div class="knob"></div>
         </div>
