Add gridline toggle

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="buttons">
                     <button id="change-grid">Change Grid Size</button>
                     <button id="reset">Reset Sketch</button>
+                    <button id="gridline-toggle">Toggle Gridlines</button>
                     <button id="set-colors">Rainbow Off</button>
                 </div>
                 <label for="color-picker">Pick your color
